fix: photo-grid section (aria-label)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img
           class="profile__avatar"
           src="./images/Avatar.png"
-          alt="Фотография пожилого мужчины в красной шапке на фоне моря"
+          alt="Аватар пользователя"
         />
         <div class="profile__card">
           <div class="profile__info">
@@ -50,11 +50,11 @@
             alt="Вид на Екатерининский Дворец в городе Пушкин"
           />
           <div class="photo-grid__container">
-            <h4 class="photo-grid__title">Екатерининский Дворец. г. Пушкин</h4>
+            <h2 class="photo-grid__title">Екатерининский Дворец. г. Пушкин</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </article>
@@ -65,11 +65,11 @@
             alt="Вид на Эрмитаж на восходе солнца"
           />
           <div class="photo-grid__container">
-            <h4 class="photo-grid__title">Эрмитаж</h4>
+            <h2 class="photo-grid__title">Эрмитаж</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </article>
@@ -80,11 +80,11 @@
             alt="Вид каскад фонтанов в г. Петергоф"
           />
           <div class="photo-grid__container">
-            <h4 class="photo-grid__title">Петергоф</h4>
+            <h2 class="photo-grid__title">Петергоф</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </article>
@@ -95,11 +95,11 @@
             alt="Белые арки в парке у Екатерининского Дворца"
           />
           <div class="photo-grid__container">
-            <p class="photo-grid__title">Екатерининский Дворец</p>
+            <h2 class="photo-grid__title">Екатерининский Дворец</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </div>
@@ -110,11 +110,11 @@
             alt="Арка ведущая на Дворцовую площадь в Санкт Петербурге"
           />
           <div class="photo-grid__container">
-            <h4 class="photo-grid__title">Арка на Дворцовую площадь</h4>
+            <h2 class="photo-grid__title">Арка на Дворцовую площадь</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </article>
@@ -125,11 +125,11 @@
             alt="Здание 'Зингер' на Невском проспекте Санкт-Петербурга"
           />
           <div class="photo-grid__container">
-            <h4 class="photo-grid__title">Здание "Зингер"</h4>
+            <h2 class="photo-grid__title">Здание "Зингер"</h2>
             <button
               class="photo-grid__like-button"
               type="button"
-              name="Кнопка чтобы поставить лайк фотографии"
+              aria-label="Поставить лайк фотографии"
             ></button>
           </div>
         </article>
@@ -142,7 +142,7 @@
     <!-- POPUP -->
     <article class="popup">
       <div class="popup__container">
-        <button type="button" class="popup__close-button"></button>
+        <button type="button" class="popup__close-button" aria-label="Закрыть окно"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="popup__form" name="profileform">
           <input class="popup__input popup__input_type_title" type="text" name="profiletitle" />
