--- a/index.html
+++ b/index.html
@@ -43,14 +43,16 @@
       </section>
       <!-- PHOTO GRID -->
       <section class="photo-grid">
+        <template class="photo-grid__template">
         <article class="photo-grid__card">
+          <button class="photo-grid__delete-button" type="button" aria-label="Удалить изображение"></button>
           <img
             class="photo-grid__image"
-            src="./images/photo-grid_CatherinePalace.JPG"
-            alt="Вид на Екатерининский Дворец в городе Пушкин"
+            src=""
+            alt=""
           />
           <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Екатерининский Дворец. г. Пушкин</h2>
+            <h2 class="photo-grid__title"></h2>
             <button
               class="photo-grid__like-button"
               type="button"
@@ -58,89 +60,15 @@
             ></button>
           </div>
         </article>
-        <article class="photo-grid__card">
-          <img
-            class="photo-grid__image"
-            src="./images/photo-grid_Hermitage.JPG"
-            alt="Вид на Эрмитаж на восходе солнца"
-          />
-          <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Эрмитаж</h2>
-            <button
-              class="photo-grid__like-button"
-              type="button"
-              aria-label="Поставить лайк фотографии"
-            ></button>
-          </div>
-        </article>
-        <article class="photo-grid__card">
-          <img
-            class="photo-grid__image"
-            src="./images/photo-grid_Peterhof.JPG"
-            alt="Вид каскад фонтанов в г. Петергоф"
-          />
-          <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Петергоф</h2>
-            <button
-              class="photo-grid__like-button"
-              type="button"
-              aria-label="Поставить лайк фотографии"
-            ></button>
-          </div>
-        </article>
-        <div class="photo-grid__card">
-          <img
-            class="photo-grid__image"
-            src="./images/photo-grid_PushkinMuseum.JPG"
-            alt="Белые арки в парке у Екатерининского Дворца"
-          />
-          <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Екатерининский Дворец</h2>
-            <button
-              class="photo-grid__like-button"
-              type="button"
-              aria-label="Поставить лайк фотографии"
-            ></button>
-          </div>
-        </div>
-        <article class="photo-grid__card">
-          <img
-            class="photo-grid__image"
-            src="./images/photo-grid_Saint-Petersburg-1.JPG"
-            alt="Арка ведущая на Дворцовую площадь в Санкт Петербурге"
-          />
-          <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Арка на Дворцовую площадь</h2>
-            <button
-              class="photo-grid__like-button"
-              type="button"
-              aria-label="Поставить лайк фотографии"
-            ></button>
-          </div>
-        </article>
-        <article class="photo-grid__card">
-          <img
-            class="photo-grid__image"
-            src="./images/photo-grid_ZingerHouse.JPG"
-            alt="Здание 'Зингер' на Невском проспекте Санкт-Петербурга"
-          />
-          <div class="photo-grid__container">
-            <h2 class="photo-grid__title">Здание "Зингер"</h2>
-            <button
-              class="photo-grid__like-button"
-              type="button"
-              aria-label="Поставить лайк фотографии"
-            ></button>
-          </div>
-        </article>
+      </template>
       </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <!-- POPUP -->
-    <article class="popup">
+    <!-- POPUP - EDIT PROFILE -->
+    <article class="popup popup_profile-edit">
       <div class="popup__container">
         <button type="button" class="popup__close-button" aria-label="Закрыть окно"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
@@ -151,6 +79,29 @@
         </form>
       </div>
     </article>
+
+    <!-- POPUP - ADD PHOTO  -->
+    <article class="popup popup_add-photo">
+      <div class="popup__container">
+        <button type="button" class="popup__close-button" aria-label="Закрыть окно"></button>
+        <h3 class="popup__title">Новое место</h3>
+        <form class="popup__form" name="addphotoform">
+          <input class="popup__input popup__input_type_photo-name" type="text" name="phototitle" placeholder="Название изображения" />
+          <input class="popup__input popup__input_type_photo-url" type="text" name="photourl" placeholder="Ссылка на изображение"/>
+          <button class="popup__submit-button" type="submit">Создать</button>
+        </form>
+      </div>
+    </article>
+
+    <!-- POPUP - PHOTO GRID IMAGE FULLSCREEN -->
+      <section class="popup popup_image-fullscreen">
+        <div class="popup__image-container">
+          <button type="button" class="popup__close-button" aria-label="Закрыть окно"></button>
+          <img src="" alt="" class="popup__image">
+        <p class="popup__image-fullscreen-text"></p>
+      </div>
+      </section>
+
 
     <!-- SCRIPTS -->
     <script src="./scripts/index.js"></script>
