fix: forms and JS

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
             class="popup__input popup__input_type_title"
             type="text"
             name="profiletitle"
+            placeholder="Имя профиля"
           />
           <input
             class="popup__input popup__input_type_subtitle"
             type="text"
             name="profilesubtitle"
+            placeholder="Описание профиля"
           />
           <button class="popup__submit-button" type="submit">Сохранить</button>
         </form>
@@ -114,7 +116,7 @@
           />
           <input
             class="popup__input popup__input_type_photo-url"
-            type="text"
+            type="url"
             name="photourl"
             placeholder="Ссылка на изображение"
           />
