--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         ></button>
         <img
           src="./images/photo-grid_CatherinePalace.jpg"
-          alt=""
+          alt="Описание изображения"
           class="popup__image"
         />
         <p class="popup__image-fullscreen-text"></p>
