add: JS classes Card & FormValidator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <!-- PHOTO GRID -->
       <section class="photo-grid">
-        <template class="photo-grid__template">
+        <template class="photo-grid__template" id="photo-grid__template">
           <article class="photo-grid__card">
             <button
               class="photo-grid__delete-button"
@@ -172,8 +172,8 @@
     </section>
 
     <!-- SCRIPTS -->
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
+    <script type="module" src="./scripts/index.js"></script>
 
   </body>
 </html>
