--- a/index.html
+++ b/index.html
@@ -43,28 +43,7 @@
       </section>
       <!-- PHOTO GRID -->
       <section class="photo-grid">
-        <template class="photo-grid__template">
-          <article class="photo-grid__card">
-            <button
-              class="photo-grid__delete-button"
-              type="button"
-              aria-label="Удалить изображение"
-            ></button>
-            <img
-              class="photo-grid__image"
-              src="./images/photo-grid_CatherinePalace.jpg"
-              alt=""
-            />
-            <div class="photo-grid__container">
-              <h2 class="photo-grid__title"></h2>
-              <button
-                class="photo-grid__like-button"
-                type="button"
-                aria-label="Поставить лайк фотографии"
-              ></button>
-            </div>
-          </article>
-        </template>
+
       </section>
     </main>
     <footer class="footer">
@@ -114,6 +93,30 @@
         </form>
       </div>
     </article>
+
+    <!-- TEMPLATE -->
+    <template class="photo-grid__template">
+      <article class="photo-grid__card">
+        <button
+          class="photo-grid__delete-button"
+          type="button"
+          aria-label="Удалить изображение"
+        ></button>
+        <img
+          class="photo-grid__image"
+          src="./images/photo-grid_CatherinePalace.jpg"
+          alt=""
+        />
+        <div class="photo-grid__container">
+          <h2 class="photo-grid__title"></h2>
+          <button
+            class="photo-grid__like-button"
+            type="button"
+            aria-label="Поставить лайк фотографии"
+          ></button>
+        </div>
+      </article>
+    </template>
 
     <!-- POPUP - ADD PHOTO  -->
     <article class="popup popup_add-photo">
