--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link href="../src/pages/index.css" rel="stylesheet"> -->
     <title>Mesto</title>
   </head>
   <body class="root">
@@ -131,7 +132,7 @@
           <input
             class="popup__input popup__input_type_photo-name"
             type="text"
-            name="phototitle"
+            name="name"
             id="phototitle-input"
             placeholder="Название изображения"
             minlength="2"
@@ -144,7 +145,7 @@
           <input
             class="popup__input popup__input_type_photo-url"
             type="url"
-            name="photourl"
+            name="link"
             id="photourl-input"
             placeholder="Ссылка на изображение"
             required
@@ -175,6 +176,6 @@
 
 
 
-
+    <!-- <script type="module" src="../src/pages/index.js"></script> -->
   </body>
 </html>
